# silver

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.bat  build.sh  build_mingw.ps1  build_server.sh  clean.bat  clean.sh  launch_client.sh  launch_server.sh  lsan_suppressions.txt  mingw64-toolchain.cmake  notes.md  reading.txt  server.py  world.py
assets/shaders/: block_fragment.glsl
assets/textures/: texture.xcf
buildtools/windows/mingw64/: version_info.txt
src/: auth.c  client.c  cube.c  db.c  item.c  main.c  map.c  matrix.c  ring.c  server.c  sign.c  util.c  util.h  world.c
src/client/: chat.c  network.c  world_interact.c
src/client/util/: shutdown.c
src/common/: common.c  config.c  logging.c  qoi_utils.c
src/common/util/: file_util.c  ftoa.c  itoa.c  json_util.c  ltoa.c  min_max.c  pointer_util.c  string_util.c  ulltoa.c  vec_util.c  windows_console_helper.c
src/headers/: define_config.h  util.h
src/headers/client/: chat.h  network.h  world_interact.h
src/headers/client/util/: shutdown.h
src/headers/common/: common.h  config.h  data_structures.h  logging.h  model.h  qoi_utils.h
src/headers/common/util/: file_util.h  ftoa.h  itoa.h  json_util.h  ltoa.h  min_max.h  pointer_util.h  shutdown.h  string_util.h  ulltoa.h  vec_util.h  windows_console_helper.h
src/headers/server/: config_main.h  default_conf.h  server.h
src/headers/server/util/: shutdown.h
src/server/: config_main.c  server.c
src/server/util/: shutdown.c
textures/: sneed.qoi
